removed superfluos metadata

--- a/{{cookiecutter.directory_name}}/webpage/templates/webpage/index.html
+++ b/{{cookiecutter.directory_name}}/webpage/templates/webpage/index.html
@@ -6,8 +6,8 @@
 
 
     <h1 class="text-center">{% projects_metadata 'title' %}</h1>
-    <h2 class="text-center">{% projects_metadata 'subtitle' %}</h2>
-    <p class="text-center">{% projects_metadata 'description' %}</p>
+    <h2 class="text-center">{% lorem 10 w %}</h2>
+    <p class="text-center">{% lorem 4 %}</p>
 
 
 {% endblock %}
