--- a/{{cookiecutter.directory_name}}/webpage/templates/webpage/partials/navbar.html
+++ b/{{cookiecutter.directory_name}}/webpage/templates/webpage/partials/navbar.html
@@ -29,7 +29,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'archiv:courtdecission_browse' %}">Browse</a>
+                        <a class="nav-link" href="#">Browse</a>
                     </li>
                 </ul>
                 <!-- <form class="d-flex">
