--- a/{{cookiecutter.directory_name}}/templates/base.html
+++ b/{{cookiecutter.directory_name}}/templates/base.html
@@ -2,17 +2,17 @@
 <html lang="en" class="h-100" >
 
 <head>
-{% include "webpage/partials/head.html" %}
+{% include "partials/head.html" %}
 </head>
 
 <body class="d-flex flex-column h-100">
-    {% include "webpage/partials/navbar.html" %}
+    {% include "partials/navbar.html" %}
     <main class="flex-shrink-0">
         <div class="container-fluid">
             {% block content %}{% endblock %}
         </div>
     </main>
-    {% include "webpage/partials/footer.html" %}
+    {% include "partials/footer.html" %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
